Add project image container with project image to project section in index.html

--- a/index.html
+++ b/index.html
@@ -250,11 +250,13 @@
           <h2 class="section__title">Projects</h2>
           <div class="project__card--wrapper">
             <div class="project__card">
-              <img
-                class="project__screenshoot"
-                src="./assets/screenshots/f_d_a_home_page.png"
-                alt="home page screenshot"
-              />
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/general-home-page.png"
+                  alt="home page screenshot"
+                />
+              </div>
               <div class="project__name_and_icons">
                 <h4 class="project__name">Food Delivery App - MVP Build</h4>
                 <div class="project__icons">
