--- a/index.html
+++ b/index.html
@@ -253,157 +253,157 @@
               <div class="project-image">
                 <img
                   class="project__screenshoot"
+                  src="./assets/screenshots/desktop-view.png"
+                  alt="screenshot of desktop view"
+                />
+              </div>
+              <div class="project__name_and_icons">
+                <h4 class="project__name">Responsive website</h4>
+                <div class="project__icons">
+                  <img
+                    class="project__github__icon"
+                    src="./assets/icons/github.svg"
+                    alt="github"
+                  />
+                  <img
+                    class="project__open-in-new__icon"
+                    src="./assets/icons/open-in-new.svg"
+                    alt="open-in-new link"
+                  />
+                </div>
+              </div>
+              <p class="project__description">
+                Short description of the project. Just a couple sentences will
+                do.
+              </p>
+            </div>
+
+            <div class="project__card">
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/Desktop-view_Project_landing_page.png"
+                  alt="screenshot of landing page desktop view"
+                />
+              </div>
+              <div class="project__name_and_icons">
+                <h4 class="project__name">Landing Page</h4>
+                <div class="project__icons">
+                  <img
+                    class="project__github__icon"
+                    src="./assets/icons/github.svg"
+                    alt="github"
+                  />
+                  <img
+                    class="project__open-in-new__icon"
+                    src="./assets/icons/open-in-new.svg"
+                    alt="open-in-new link"
+                  />
+                </div>
+              </div>
+              <p class="project__description">
+                Short description of the project. Just a couple sentences will
+                do.
+              </p>
+            </div>
+
+            <div class="project__card">
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/Tic Tac Toe 3.png"
+                  alt="desktop view of "
+                />
+              </div>
+              <div class="project__name_and_icons">
+                <h4 class="project__name">Tic-Tac-Toe Game</h4>
+                <div class="project__icons">
+                  <img
+                    class="project__github__icon"
+                    src="./assets/icons/github.svg"
+                    alt="github"
+                  />
+                  <img
+                    class="project__open-in-new__icon"
+                    src="./assets/icons/open-in-new.svg"
+                    alt="open-in-new link"
+                  />
+                </div>
+              </div>
+              <p class="project__description">
+                Short description of the project. Just a couple sentences will
+                do.
+              </p>
+            </div>
+
+            <div class="project__card">
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/Library_3.png"
+                  alt="desktop view of "
+                />
+              </div>
+              <div class="project__name_and_icons">
+                <h4 class="project__name">Library</h4>
+                <div class="project__icons">
+                  <img
+                    class="project__github__icon"
+                    src="./assets/icons/github.svg"
+                    alt="github"
+                  />
+                  <img
+                    class="project__open-in-new__icon"
+                    src="./assets/icons/open-in-new.svg"
+                    alt="open-in-new link"
+                  />
+                </div>
+              </div>
+              <p class="project__description">
+                Short description of the project. Just a couple sentences will
+                do.
+              </p>
+            </div>
+
+            <div class="project__card">
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/calculator.png"
+                  alt="desktop view of "
+                />
+              </div>
+              <div class="project__name_and_icons">
+                <h4 class="project__name">Calculator</h4>
+                <div class="project__icons">
+                  <img
+                    class="project__github__icon"
+                    src="./assets/icons/github.svg"
+                    alt="github"
+                  />
+                  <img
+                    class="project__open-in-new__icon"
+                    src="./assets/icons/open-in-new.svg"
+                    alt="open-in-new link"
+                  />
+                </div>
+              </div>
+              <p class="project__description">
+                Short description of the project. Just a couple sentences will
+                do.
+              </p>
+            </div>
+
+            <div class="project__card">
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
                   src="./assets/screenshots/general-home-page.png"
-                  alt="home page screenshot"
+                  alt="screenshot of desktop view "
                 />
               </div>
               <div class="project__name_and_icons">
                 <h4 class="project__name">Food Delivery App - MVP Build</h4>
-                <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
-                </div>
-              </div>
-              <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
-              </p>
-            </div>
-
-            <div class="project__card">
-              <div class="project-image">
-                <img
-                  class="project__screenshoot"
-                  src="./assets/screenshots/desktop-view.png"
-                  alt="desktop view of "
-                />
-              </div>
-              <div class="project__name_and_icons">
-                <h4 class="project__name">Responsive website layout</h4>
-                <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
-                </div>
-              </div>
-              <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
-              </p>
-            </div>
-
-            <div class="project__card">
-              <div class="project-image">
-                <img
-                  class="project__screenshoot"
-                  src="./assets/screenshots/desktop-view.png"
-                  alt="desktop view of "
-                />
-              </div>
-              <div class="project__name_and_icons">
-                <h4 class="project__name">Project name</h4>
-                <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
-                </div>
-              </div>
-              <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
-              </p>
-            </div>
-
-            <div class="project__card">
-              <div class="project-image">
-                <img
-                  class="project__screenshoot"
-                  src="./assets/screenshots/desktop-view.png"
-                  alt="desktop view of "
-                />
-              </div>
-              <div class="project__name_and_icons">
-                <h4 class="project__name">Project name</h4>
-                <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
-                </div>
-              </div>
-              <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
-              </p>
-            </div>
-
-            <div class="project__card">
-              <div class="project-image">
-                <img
-                  class="project__screenshoot"
-                  src="./assets/screenshots/desktop-view.png"
-                  alt="desktop view of "
-                />
-              </div>
-              <div class="project__name_and_icons">
-                <h4 class="project__name">Project name</h4>
-                <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
-                </div>
-              </div>
-              <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
-              </p>
-            </div>
-
-            <div class="project__card">
-              <div class="project-image">
-                <img
-                  class="project__screenshoot"
-                  src="./assets/screenshots/desktop-view.png"
-                  alt="desktop view of "
-                />
-              </div>
-              <div class="project__name_and_icons">
-                <h4 class="project__name">Project name</h4>
                 <div class="project__icons">
                   <img
                     class="project__github__icon"
