Add project description and update project's name in index.html

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 />
               </div>
               <div class="project__name_and_icons">
-                <h4 class="project__name">Responsive website</h4>
+                <h4 class="project__name">Multi-Section Responsive Website</h4>
                 <div class="project__icons">
                   <img
                     class="project__github__icon"
@@ -273,40 +273,14 @@
                 </div>
               </div>
               <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
+                A full-page responsive website designed with mobile-first
+                principles and flexible layouts. Features header, hero section,
+                content blocks, and a footer — all adapting smoothly across
+                screen sizes.
               </p>
             </div>
 
-            <div class="project__card">
-              <div class="project-image">
-                <img
-                  class="project__screenshoot"
-                  src="./assets/screenshots/Desktop-view_Project_landing_page.png"
-                  alt="screenshot of landing page desktop view"
-                />
-              </div>
-              <div class="project__name_and_icons">
-                <h4 class="project__name">Landing Page</h4>
-                <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
-                </div>
-              </div>
-              <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
-              </p>
-            </div>
-
+            
             <div class="project__card">
               <div class="project-image">
                 <img
@@ -316,7 +290,7 @@
                 />
               </div>
               <div class="project__name_and_icons">
-                <h4 class="project__name">Tic-Tac-Toe Game</h4>
+                <h4 class="project__name">Interactive Tic-Tac-Toe Game</h4>
                 <div class="project__icons">
                   <img
                     class="project__github__icon"
@@ -331,8 +305,10 @@
                 </div>
               </div>
               <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
+                A classic 2-player Tic-Tac-Toe game built using JavaScript and
+                DOM manipulation. Includes interactive gameplay, real-time
+                win/draw detection, and reset functionality. Great for
+                showcasing logical thinking and client-side scripting skills.
               </p>
             </div>
 
@@ -345,7 +321,7 @@
                 />
               </div>
               <div class="project__name_and_icons">
-                <h4 class="project__name">Library</h4>
+                <h4 class="project__name">Library App</h4>
                 <div class="project__icons">
                   <img
                     class="project__github__icon"
@@ -360,8 +336,10 @@
                 </div>
               </div>
               <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
+                A dynamic mini-library system that allows users to add, edit,
+                and remove book entries directly from the browser. Demonstrates
+                JavaScript data handling, event-driven DOM manipulation, and
+                basic CRUD-like functionality.
               </p>
             </div>
 
@@ -374,7 +352,7 @@
                 />
               </div>
               <div class="project__name_and_icons">
-                <h4 class="project__name">Calculator</h4>
+                <h4 class="project__name">Calculator App</h4>
                 <div class="project__icons">
                   <img
                     class="project__github__icon"
@@ -389,8 +367,10 @@
                 </div>
               </div>
               <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
+                A basic yet fully functional calculator for performing
+                arithmetic operations. Built with pure JavaScript and styled for
+                both mobile and desktop. Designed to highlight JavaScript logic
+                and clean UI implementation.
               </p>
             </div>
 
@@ -398,12 +378,12 @@
               <div class="project-image">
                 <img
                   class="project__screenshoot"
-                  src="./assets/screenshots/general-home-page.png"
-                  alt="screenshot of desktop view "
+                  src="./assets/screenshots/Desktop-view_Project_landing_page.png"
+                  alt="screenshot of landing page desktop view"
                 />
               </div>
               <div class="project__name_and_icons">
-                <h4 class="project__name">Food Delivery App - MVP Build</h4>
+                <h4 class="project__name">Responsive Landing Page</h4>
                 <div class="project__icons">
                   <img
                     class="project__github__icon"
@@ -418,8 +398,46 @@
                 </div>
               </div>
               <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
+                A modern, fully responsive landing page built with semantic
+                HTML5 and mobile-first CSS3. Designed to showcase products or
+                services with clean layout, structured content, and optimized
+                visuals. Developed based on a mockup to demonstrate
+                design-to-code skills.
+              </p>
+            </div>
+
+
+            <div class="project__card">
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/food-delivery-app.png"
+                  alt="screenshot of desktop view "
+                />
+              </div>
+              <div class="project__name_and_icons">
+                <h4 class="project__name">
+                  Full-Stack Food Delivery Platform (WIP)
+                </h4>
+                <div class="project__icons">
+                  <img
+                    class="project__github__icon"
+                    src="./assets/icons/github.svg"
+                    alt="github"
+                  />
+                  <img
+                    class="project__open-in-new__icon"
+                    src="./assets/icons/open-in-new.svg"
+                    alt="open-in-new link"
+                  />
+                </div>
+              </div>
+              <p class="project__description">
+                An in-progress full-stack web application supporting multiple
+                user roles: Customers, Providers, and Delivery Staff. Built with
+                React, Node.js, and PostgreSQL. Includes user authentication,
+                meal listings, and order tracking. Demonstrates real-world
+                architecture and full-stack development practice.
               </p>
             </div>
           </div>
