--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
                 content blocks, and a footer — all adapting smoothly across
                 screen sizes.
               </p>
+              <p class="tech"><span>HTML5</span><span>CSS3</span></p>
             </div>
 
-            
             <div class="project__card">
               <div class="project-image">
                 <img
@@ -309,6 +309,9 @@
                 DOM manipulation. Includes interactive gameplay, real-time
                 win/draw detection, and reset functionality. Great for
                 showcasing logical thinking and client-side scripting skills.
+              </p>
+              <p class="tech">
+                <span>HTML5</span><span>CSS3</span><span>JavaScript</span>
               </p>
             </div>
 
@@ -341,6 +344,9 @@
                 JavaScript data handling, event-driven DOM manipulation, and
                 basic CRUD-like functionality.
               </p>
+              <p class="tech">
+                <span>HTML5</span><span>CSS3</span><span>JavaScript</span>
+              </p>
             </div>
 
             <div class="project__card">
@@ -371,6 +377,10 @@
                 arithmetic operations. Built with pure JavaScript and styled for
                 both mobile and desktop. Designed to highlight JavaScript logic
                 and clean UI implementation.
+              </p>
+              <p class="tech">
+                <span>HTML5</span><span>CSS3</span><span>JavaScript</span
+                ><span>DOM</span>
               </p>
             </div>
 
@@ -404,8 +414,8 @@
                 visuals. Developed based on a mockup to demonstrate
                 design-to-code skills.
               </p>
+              <p class="tech"><span>HTML5</span><span>CSS3</span></p>
             </div>
-
 
             <div class="project__card">
               <div class="project-image">
@@ -438,6 +448,10 @@
                 React, Node.js, and PostgreSQL. Includes user authentication,
                 meal listings, and order tracking. Demonstrates real-world
                 architecture and full-stack development practice.
+              </p>
+              <p class="tech">
+                <span>React</span><span>Node.js</span><span>Express</span
+                ><span>PostgreSQL</span><span>JWT</span>
               </p>
             </div>
           </div>
