Replace class tech paragraph element with div element to projects section in index.html

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 content blocks, and a footer — all adapting smoothly across
                 screen sizes.
               </p>
-              <p class="tech"><span>HTML5</span><span>CSS3</span></p>
+              <div class="tech"><span>HTML5</span><span>CSS3</span></div>
             </div>
 
             <div class="project__card">
@@ -310,9 +310,9 @@
                 win/draw detection, and reset functionality. Great for
                 showcasing logical thinking and client-side scripting skills.
               </p>
-              <p class="tech">
+              <div class="tech">
                 <span>HTML5</span><span>CSS3</span><span>JavaScript</span>
-              </p>
+              </div>
             </div>
 
             <div class="project__card">
@@ -344,9 +344,9 @@
                 JavaScript data handling, event-driven DOM manipulation, and
                 basic CRUD-like functionality.
               </p>
-              <p class="tech">
+              <div class="tech">
                 <span>HTML5</span><span>CSS3</span><span>JavaScript</span>
-              </p>
+              </div>
             </div>
 
             <div class="project__card">
@@ -378,10 +378,10 @@
                 both mobile and desktop. Designed to highlight JavaScript logic
                 and clean UI implementation.
               </p>
-              <p class="tech">
+              <div class="tech">
                 <span>HTML5</span><span>CSS3</span><span>JavaScript</span
                 ><span>DOM</span>
-              </p>
+              </div>
             </div>
 
             <div class="project__card">
@@ -414,7 +414,7 @@
                 visuals. Developed based on a mockup to demonstrate
                 design-to-code skills.
               </p>
-              <p class="tech"><span>HTML5</span><span>CSS3</span></p>
+              <div class="tech"><span>HTML5</span><span>CSS3</span></div>
             </div>
 
             <div class="project__card">
@@ -449,10 +449,11 @@
                 meal listings, and order tracking. Demonstrates real-world
                 architecture and full-stack development practice.
               </p>
-              <p class="tech">
+
+              <div class="tech">
                 <span>React</span><span>Node.js</span><span>Express</span
                 ><span>PostgreSQL</span><span>JWT</span>
-              </p>
+              </div>
             </div>
           </div>
         </div>
