Format tech div for better readability in style.css

--- a/index.html
+++ b/index.html
@@ -278,7 +278,10 @@
                 content blocks, and a footer — all adapting smoothly across
                 screen sizes.
               </p>
-              <div class="tech"><span>HTML5</span><span>CSS3</span></div>
+              <div class="tech">
+                <span>HTML5</span>
+                <span>CSS3</span>
+              </div>
             </div>
 
             <div class="project__card">
@@ -311,7 +314,9 @@
                 showcasing logical thinking and client-side scripting skills.
               </p>
               <div class="tech">
-                <span>HTML5</span><span>CSS3</span><span>JavaScript</span>
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>JavaScript</span>
               </div>
             </div>
 
@@ -345,7 +350,9 @@
                 basic CRUD-like functionality.
               </p>
               <div class="tech">
-                <span>HTML5</span><span>CSS3</span><span>JavaScript</span>
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>JavaScript</span>
               </div>
             </div>
 
@@ -379,8 +386,10 @@
                 and clean UI implementation.
               </p>
               <div class="tech">
-                <span>HTML5</span><span>CSS3</span><span>JavaScript</span
-                ><span>DOM</span>
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>JavaScript</span>
+                <span>DOM</span>
               </div>
             </div>
 
@@ -414,7 +423,10 @@
                 visuals. Developed based on a mockup to demonstrate
                 design-to-code skills.
               </p>
-              <div class="tech"><span>HTML5</span><span>CSS3</span></div>
+              <div class="tech">
+                <span>HTML5</span>
+                <span>CSS3</span>
+              </div>
             </div>
 
             <div class="project__card">
@@ -451,8 +463,11 @@
               </p>
 
               <div class="tech">
-                <span>React</span><span>Node.js</span><span>Express</span
-                ><span>PostgreSQL</span><span>JWT</span>
+                <span>React</span>
+                <span>Node.js</span>
+                <span>Express</span>
+                <span>PostgreSQL</span>
+                <span>JWT</span>
               </div>
             </div>
           </div>
