--- a/index.html
+++ b/index.html
@@ -156,91 +156,91 @@
 
           <div class="backend skills__card">
             <h3 class="skills__heading">Backend</h3>
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/nodejs.svg"
-                alt="node.js"
-              />
-              <h4 class="skills__items__name">Node.js</h4>
-            </div>
-
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/express.svg"
-                alt="express.js"
-              />
-              <h4 class="skills__items__name">Express.js</h4>
-            </div>
-
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/postgresql.svg"
-                alt="postgresql"
-              />
-              <h4 class="skills__items__name">PostgreSQL</h4>
+            <div class="skills__items--container">
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/nodejs.svg"
+                  alt="node.js"
+                />
+                <h4 class="skills__items__name">Node.js</h4>
+              </div>
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/express.svg"
+                  alt="express.js"
+                />
+                <h4 class="skills__items__name">Express.js</h4>
+              </div>
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/postgresql.svg"
+                  alt="postgresql"
+                />
+                <h4 class="skills__items__name">PostgreSQL</h4>
+              </div>
             </div>
           </div>
 
           <div class="tools skills__card">
             <h3 class="skills__heading">Tolls</h3>
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/git.svg"
-                alt="git"
-              />
-              <h4 class="skills__items__name">Git</h4>
-            </div>
-
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/github.svg"
-                alt="github"
-              />
-              <h4 class="skills__items__name">GitHub</h4>
-            </div>
-
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/microsoft-visual-studio-code.svg"
-                alt="vs code"
-              />
-              <h4 class="skills__items__name">VS Code</h4>
-            </div>
-
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/postman.svg"
-                alt="postman"
-              />
-              <h4 class="skills__items__name">Postman</h4>
+            <div class="skills__items--container">
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/git.svg"
+                  alt="git"
+                />
+                <h4 class="skills__items__name">Git</h4>
+              </div>
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/github.svg"
+                  alt="github"
+                />
+                <h4 class="skills__items__name">GitHub</h4>
+              </div>
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/microsoft-visual-studio-code.svg"
+                  alt="vs code"
+                />
+                <h4 class="skills__items__name">VS Code</h4>
+              </div>
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/postman.svg"
+                  alt="postman"
+                />
+                <h4 class="skills__items__name">Postman</h4>
+              </div>
             </div>
           </div>
 
           <div class="dev-environments skills__card">
             <h3 class="skills__heading">Development Environments</h3>
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/linux.svg"
-                alt="linux"
-              />
-              <h4 class="skills__items__name">Linux (Ubuntu)</h4>
-            </div>
-
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/microsoft-windows.svg"
-                alt="windows"
-              />
-              <h4 class="skills__items__name">Windows</h4>
+            <div class="skills__items--container">
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/linux.svg"
+                  alt="linux"
+                />
+                <h4 class="skills__items__name">Linux (Ubuntu)</h4>
+              </div>
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/microsoft-windows.svg"
+                  alt="windows"
+                />
+                <h4 class="skills__items__name">Windows</h4>
+              </div>
             </div>
           </div>
         </div>
