Add class to testimonial's container, quote, speaker section in index.html

--- a/index.html
+++ b/index.html
@@ -475,21 +475,21 @@
       </section>
 
       <section class="testimonials">
-        <div class="container">
+        <div class="container testimonials--content">
           <h2 class="section__title">Testimonials</h2>
           <p>
             Real client feedback coming soon. Until then, here's what people
             say:
           </p>
-          <blockquote>
+          <blockquote class="quote">
             “Very responsive, pixel-perfect HTML from Figma designs. Great
             communicator.”
-            <footer>— UX Designer, Apple (Mock)</footer>
+            <footer class="quote--speaker">— UX Designer, Apple (Mock)</footer>
           </blockquote>
-          <blockquote>
+          <blockquote class="quote">
             “Reliable, fast, and easy to work with. Highly recommend for
             front-end projects.”
-            <footer>— Tech Lead, Google (Mock)</footer>
+            <footer class="quote--speaker">— Tech Lead, Google (Mock)</footer>
           </blockquote>
         </div>
       </section>
