Add class to resume's div, element for select that block or element in index.html

--- a/index.html
+++ b/index.html
@@ -495,9 +495,9 @@
       </section>
 
       <section class="resume">
-        <div class="conatiner">
+        <div class="container resume--content">
           <h2 class="section__title">Resume</h2>
-          <p>
+          <p class="resume--description">
             This is my general resume. For job-specific or updated versions,
             fell free to contact me.
           </p>
@@ -506,7 +506,7 @@
               <button class="resume__btn">Download Resume</button>
             </a>
             <a href="./assets/resume/Prodip_Bain_Resume.pdf" target="_blank">
-              <button class="resume__btn">View Resume</button>
+              <button class="resume__btn resume__btn--view">View Resume</button>
             </a>
           </div>
         </div>
