Add picture tag html code for art direction in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
         <div class="background-shape"></div>
         <div class="container">
           <div class="hero__image--content">
-            <!--images get from responsivebreakpoints.com -->
             <picture>
               <img
                 class="hero__image"
@@ -518,7 +517,7 @@
         <div class="contact__info">
           <h2 class="section__title">Contact</h2>
           <p class="contact__text">
-            Please get in touch if you think our work could ne mutually
+            Please get in touch if you think our work could be mutually
             beneficial!
           </p>
           <div class="contact__address--info">
@@ -558,9 +557,23 @@
             />
           </div>
         </div>
-        <img class="contact__image" src="" alt="" />
       </div>
     </section>
+    <picture>
+      <img
+        sizes="(max-width: 960px) 100vw, 960px"
+        srcset="
+          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_200.jpg 200w,
+          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_510.jpg 510w,
+          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_668.jpg 668w,
+          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_830.jpg 830w,
+          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_958.jpg 958w,
+          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg 960w
+        "
+        src="/assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg"
+        alt="fallen angel by alexandre cabanel"
+      />
+    </picture>
     <script src="./main.js"></script>
   </body>
 </html>
