Move picture element inside contact section in index.html

--- a/index.html
+++ b/index.html
@@ -513,84 +513,87 @@
     </main>
 
     <section class="contact">
-      <div class="container">
-        <div class="contact__info">
-          <h2 class="section__title">Contact</h2>
-          <p class="contact__text">
-            Please get in touch if you think our work could be mutually
-            beneficial!
-          </p>
-          <div class="contact__address--info">
-            <img
-              class="contact__map-maker__icon"
-              src="./assets/icons/map-marker.svg"
-              alt="map maker"
-            />
-            <p class="contact__address">Malibagh, Dhaka 1217, Bangladesh.</p>
+      <div class="contact__container--wrapper">
+        <div class="container">
+          <div class="contact__info">
+            <h2 class="section__title">Contact</h2>
+            <p class="contact__text">
+              Please get in touch if you think our work could be mutually
+              beneficial!
+            </p>
+            <div class="contact__address--info">
+              <img
+                class="contact__map-maker__icon"
+                src="./assets/icons/map-marker.svg"
+                alt="map maker"
+              />
+              <p class="contact__address">Malibagh, Dhaka 1217, Bangladesh.</p>
+            </div>
+            <div class="contact__num--info">
+              <img
+                class="contact__phone__icon"
+                src="./assets/icons/phone.svg"
+                alt="phone"
+              />
+              <p class="contact__number">+8801768021717</p>
+            </div>
+            <div class="contact__email--info">
+              <img
+                class="contact__email__icon"
+                src="./assets/icons/email.svg"
+                alt="email"
+              />
+              <p class="contact__email">prodipbain63@gmail.com</p>
+            </div>
+            <div class="contact__social--icons">
+              <img
+                class="contact__github--icon"
+                src="./assets/icons/github.svg"
+                alt="github"
+              />
+              <img
+                class="contact__linkedin--icon"
+                src="./assets/icons/linkedin.svg"
+                alt="linkedin"
+              />
+            </div>
           </div>
-          <div class="contact__num--info">
+          <picture>
             <img
-              class="contact__phone__icon"
-              src="./assets/icons/phone.svg"
-              alt="phone"
+              class="contact-image-inside-container"
+              sizes="(max-width: 960px) 100vw, 960px"
+              srcset="
+                /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_200.jpg 200w,
+                /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_510.jpg 510w,
+                /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_668.jpg 668w,
+                /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_830.jpg 830w,
+                /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_958.jpg 958w,
+                /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg 960w
+              "
+              src="/assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg"
+              alt="fallen angel by alexandre cabanel"
             />
-            <p class="contact__number">+8801768021717</p>
-          </div>
-          <div class="contact__email--info">
-            <img
-              class="contact__email__icon"
-              src="./assets/icons/email.svg"
-              alt="email"
-            />
-            <p class="contact__email">prodipbain63@gmail.com</p>
-          </div>
-          <div class="contact__social--icons">
-            <img
-              class="contact__github--icon"
-              src="./assets/icons/github.svg"
-              alt="github"
-            />
-            <img
-              class="contact__linkedin--icon"
-              src="./assets/icons/linkedin.svg"
-              alt="linkedin"
-            />
-          </div>
+          </picture>
         </div>
-        <picture>
-          <img
-            class="contact-image-inside-container"
-            sizes="(max-width: 960px) 100vw, 960px"
-            srcset="
-              /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_200.jpg 200w,
-              /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_510.jpg 510w,
-              /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_668.jpg 668w,
-              /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_830.jpg 830w,
-              /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_958.jpg 958w,
-              /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg 960w
-            "
-            src="/assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg"
-            alt="fallen angel by alexandre cabanel"
-          />
-        </picture>
       </div>
+      <picture>
+        <img
+          class="contact-image-outside-container"
+          sizes="(max-width: 960px) 100vw, 960px"
+          srcset="
+            /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_200.jpg 200w,
+            /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_510.jpg 510w,
+            /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_668.jpg 668w,
+            /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_830.jpg 830w,
+            /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_958.jpg 958w,
+            /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg 960w
+          "
+          src="/assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg"
+          alt="fallen angel by alexandre cabanel"
+        />
+      </picture>
     </section>
-    <picture>
-      <img
-        class="contact-image-outside-container"
-        sizes="(max-width: 960px) 100vw, 960px"
-        srcset="
-          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_200.jpg 200w,
-          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_510.jpg 510w,
-          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_668.jpg 668w,
-          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_830.jpg 830w,
-          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_958.jpg 958w,
-          /assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg 960w
-        "
-        src="/assets/images/Fallen_Angel__Alexandre_Cabanel/Fallen_Angel__Alexandre_Cabanel__crop_qpsxkp_c_scale,w_960.jpg"
-        alt="fallen angel by alexandre cabanel"
-      />
-    </picture>
+
     <script src="./main.js"></script>
   </body>
 </html>
