--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
       </section>
 
       <section class="testimonials">
+        <div class="background-image"></div>
         <div class="container testimonials--content">
           <h2 class="section__title">Testimonials</h2>
           <p>
