Add github, linkedin image link html in index.html

--- a/index.html
+++ b/index.html
@@ -96,16 +96,25 @@
               nesciunt hic unde. Facilis impedit commodi sed quod voluptate.
             </p>
             <div class="about_me__icons">
-              <img
-                class="about_me__github__icon"
-                src="./assets/icons/github.svg"
-                alt="github"
-              />
-              <img
-                class="about_me__linkedin__icon"
-                src="./assets/icons/linkedin.svg"
-                alt="linkedin"
-              />
+              <a
+                href="https://github.com/pbain63"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  class="about_me__github__icon"
+                  src="./assets/icons/github.svg"
+                  alt="github"
+              /></a>
+
+              <a
+                href="https://www.linkedin.com/in/prodipbain"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  class="about_me__linkedin__icon"
+                  src="./assets/icons/linkedin.svg"
+                  alt="linkedin"
+              /></a>
             </div>
           </div>
         </div>
@@ -259,11 +268,21 @@
               <div class="project__name_and_icons">
                 <h4 class="project__name">Multi-Section Responsive Website</h4>
                 <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
+                  <a
+                    href="https://github.com/pbain63"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><img
+                      class="project__github__icon"
+                      src="./assets/icons/github.svg"
+                      alt="github"
+                  /></a>
+
+                  <a
+                    href="https://github.com/pbain63"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  ></a>
                   <img
                     class="project__open-in-new__icon"
                     src="./assets/icons/open-in-new.svg"
@@ -294,11 +313,21 @@
               <div class="project__name_and_icons">
                 <h4 class="project__name">Interactive Tic-Tac-Toe Game</h4>
                 <div class="project__icons">
+                  <a
+                    href="https://github.com/pbain63"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  ></a>
                   <img
                     class="project__github__icon"
                     src="./assets/icons/github.svg"
                     alt="github"
                   />
+                  <a
+                    href="https://github.com/pbain63"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  ></a>
                   <img
                     class="project__open-in-new__icon"
                     src="./assets/icons/open-in-new.svg"
@@ -366,6 +395,11 @@
               <div class="project__name_and_icons">
                 <h4 class="project__name">Calculator App</h4>
                 <div class="project__icons">
+                  <a
+                    href="https://github.com/pbain63"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  ></a>
                   <img
                     class="project__github__icon"
                     src="./assets/icons/github.svg"
@@ -547,16 +581,25 @@
               <p class="contact__email">prodipbain63@gmail.com</p>
             </div>
             <div class="contact__social--icons">
-              <img
-                class="contact__github--icon"
-                src="./assets/icons/github.svg"
-                alt="github"
-              />
-              <img
-                class="contact__linkedin--icon"
-                src="./assets/icons/linkedin.svg"
-                alt="linkedin"
-              />
+              <a
+                href="https://github.com/pbain63"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  class="contact__github--icon"
+                  src="./assets/icons/github.svg"
+                  alt="github"
+              /></a>
+
+              <a
+                href="https://www.linkedin.com/in/prodipbain"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  class="contact__linkedin--icon"
+                  src="./assets/icons/linkedin.svg"
+                  alt="linkedin"
+              /></a>
             </div>
           </div>
           <picture>
