Add github, live demo link to projects section in index.html

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <h4 class="project__name">Multi-Section Responsive Website</h4>
                 <div class="project__icons">
                   <a
-                    href="https://github.com/pbain63"
+                    href="https://github.com/pbain63/website-by-responsive-layouts"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><img
@@ -279,15 +279,14 @@
                   /></a>
 
                   <a
-                    href="https://github.com/pbain63"
+                    href="https://pbain63.github.io/website-by-responsive-layouts"
                     target="_blank"
                     rel="noopener noreferrer"
-                  ></a>
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
+                    ><img
+                      class="project__open-in-new__icon"
+                      src="./assets/icons/open-in-new.svg"
+                      alt="open-in-new link"
+                  /></a>
                 </div>
               </div>
               <p class="project__description">
@@ -314,25 +313,24 @@
                 <h4 class="project__name">Interactive Tic-Tac-Toe Game</h4>
                 <div class="project__icons">
                   <a
-                    href="https://github.com/pbain63"
+                    href="https://github.com/pbain63/Project_Tic-Tac-Toe"
                     target="_blank"
                     rel="noopener noreferrer"
-                  ></a>
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
+                    ><img
+                      class="project__github__icon"
+                      src="./assets/icons/github.svg"
+                      alt="github"
+                  /></a>
+
                   <a
-                    href="https://github.com/pbain63"
+                    href="https://pbain63.github.io/Project_Tic-Tac-Toe/"
                     target="_blank"
                     rel="noopener noreferrer"
-                  ></a>
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
+                    ><img
+                      class="project__open-in-new__icon"
+                      src="./assets/icons/open-in-new.svg"
+                      alt="open-in-new link"
+                  /></a>
                 </div>
               </div>
               <p class="project__description">
@@ -359,16 +357,25 @@
               <div class="project__name_and_icons">
                 <h4 class="project__name">Library App</h4>
                 <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
+                  <a
+                    href="https://github.com/pbain63/Project_Library"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><img
+                      class="project__github__icon"
+                      src="./assets/icons/github.svg"
+                      alt="github"
+                  /></a>
+
+                  <a
+                    href="https://pbain63.github.io/Project_Library/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><img
+                      class="project__open-in-new__icon"
+                      src="./assets/icons/open-in-new.svg"
+                      alt="open-in-new link"
+                  /></a>
                 </div>
               </div>
               <p class="project__description">
@@ -396,20 +403,24 @@
                 <h4 class="project__name">Calculator App</h4>
                 <div class="project__icons">
                   <a
-                    href="https://github.com/pbain63"
+                    href="https://github.com/pbain63/Project_calculator"
                     target="_blank"
                     rel="noopener noreferrer"
-                  ></a>
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
+                    ><img
+                      class="project__github__icon"
+                      src="./assets/icons/github.svg"
+                      alt="github"
+                  /></a>
+
+                  <a
+                    href="https://pbain63.github.io/Project_calculator/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><img
+                      class="project__open-in-new__icon"
+                      src="./assets/icons/open-in-new.svg"
+                      alt="open-in-new link"
+                  /></a>
                 </div>
               </div>
               <p class="project__description">
@@ -437,16 +448,25 @@
               <div class="project__name_and_icons">
                 <h4 class="project__name">Responsive Landing Page</h4>
                 <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
+                  <a
+                    href="https://github.com/pbain63/Project_landing_page"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><img
+                      class="project__github__icon"
+                      src="./assets/icons/github.svg"
+                      alt="github"
+                  /></a>
+
+                  <a
+                    href="https://pbain63.github.io/Project_landing_page/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><img
+                      class="project__open-in-new__icon"
+                      src="./assets/icons/open-in-new.svg"
+                      alt="open-in-new link"
+                  /></a>
                 </div>
               </div>
               <p class="project__description">
@@ -475,16 +495,22 @@
                   Full-Stack Food Delivery Platform (WIP)
                 </h4>
                 <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
+                  <a
+                    href="https://github.com/pbain63/food-delivery-app"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><img
+                      class="project__github__icon"
+                      src="./assets/icons/github.svg"
+                      alt="github"
+                  /></a>
+
+                  <a href="#" target="_blank" rel="noopener noreferrer"
+                    ><img
+                      class="project__open-in-new__icon"
+                      src="./assets/icons/open-in-new.svg"
+                      alt="open-in-new link"
+                  /></a>
                 </div>
               </div>
               <p class="project__description">
